--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,13 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <name>spl-net</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+    </dependencies>
+
 </project>
